# theAnatomyof-PythonPackagesand_pyproject_dot_toml

./: README.md
Project1/: README.md  hello.py  main.py  pyproject.toml
Project1/utils/: multiply.py
Project2/: hello.py  pyproject.toml
